# cadquery-template

./: README.md  lefthook.yml  main.py  pyproject.toml
src/: main.ipynb
