[project]
name = "cadquery-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12" # 3.13以降では動作しない
dependencies = [
    "cadquery>=2.5.2",
    "ocp-tessellate>=3.0.17",
    "ocp-vscode>=2.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "lefthook>=1.13.4",
    "nbstripout>=0.8.1",
    "ruff>=0.13.1",
]

[tool.ruff]
extend-include = ["*.ipynb"]
